--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^5.0.0",
     "connect-redis": "^4.0.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
     "ejs": "~2.6.1",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/debug": "^4.1.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
